[gd_scene load_steps=6 format=3 uid="uid://caix2o0cux7qv"]

[ext_resource type="Script" path="res://MiniGames/Hunting/hunting.gd" id="1_oufsn"]
[ext_resource type="Texture2D" uid="uid://d0vc02gg6e2mb" path="res://Map/Assets/hunting.png" id="2_f60lh"]
[ext_resource type="Theme" uid="uid://cjoh1pmvhw5l0" path="res://Themes/overall_theme.tres" id="3_vp0qp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mq4ra"]
radius = 18.6815

[sub_resource type="Curve2D" id="Curve2D_ojdm3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -91, -60, 0, 0, 0, 0, 1212, -58, 0, 0, 0, 0, 1239, 698, 0, 0, 0, 0, -111, 704, 0, 0, 0, 0, -91, -60)
}
point_count = 5

[node name="Hunting" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_oufsn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -23.0
offset_top = -7.0
offset_right = 1168.0
offset_bottom = 660.0
color = Color(0.647059, 0.713726, 0.552941, 1)

[node name="Cursor" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(509, 301)
collision_layer = 0
collision_mask = 2

[node name="CursorTexture" type="TextureRect" parent="Cursor"]
z_index = 2
offset_left = -33.0
offset_top = -32.0
offset_right = 31.0
offset_bottom = 32.0
texture = ExtResource("2_f60lh")
stretch_mode = 3

[node name="CursorCollisionShape" type="CollisionShape2D" parent="Cursor"]
shape = SubResource("CircleShape2D_mq4ra")

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_ojdm3")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
unique_name_in_owner = true
position = Vector2(-91, -60)
rotation = 0.00153492

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 972.0
offset_right = 1143.0
offset_bottom = 103.0
theme = ExtResource("3_vp0qp")
theme_override_font_sizes/font_size = 75
text = "0000"
horizontal_alignment = 2

[node name="GameTimeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 171.0
offset_bottom = 103.0
theme = ExtResource("3_vp0qp")
theme_override_font_sizes/font_size = 75
text = "0000"
horizontal_alignment = 2

[node name="GameTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.0
one_shot = true

[node name="TimesUpScreen" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 2
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="TimesUpScreen"]
layout_mode = 0
offset_left = 171.0
offset_top = 152.0
offset_right = 871.0
offset_bottom = 488.0
color = Color(0.92549, 0.87451, 0.8, 1)

[node name="RabbitsCollectedLabel" type="Label" parent="TimesUpScreen"]
layout_mode = 0
offset_left = 349.0
offset_top = 333.0
offset_right = 492.0
offset_bottom = 356.0
theme = ExtResource("3_vp0qp")
text = "Rabbits Collected: "

[node name="RabbitsCollectedValueLabel" type="Label" parent="TimesUpScreen"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 577.0
offset_top = 333.0
offset_right = 720.0
offset_bottom = 356.0
theme = ExtResource("3_vp0qp")
text = "0000"

[node name="TimesUpLabel" type="Label" parent="TimesUpScreen"]
layout_mode = 0
offset_left = 321.0
offset_top = 181.0
offset_right = 678.0
offset_bottom = 284.0
theme = ExtResource("3_vp0qp")
theme_override_colors/font_color = Color(0.647059, 0.713726, 0.552941, 1)
theme_override_font_sizes/font_size = 75
text = "Times Up!"

[node name="ContinueDayButton" type="Button" parent="TimesUpScreen"]
layout_mode = 0
offset_left = 464.0
offset_top = 430.0
offset_right = 577.0
offset_bottom = 454.0
theme = ExtResource("3_vp0qp")
text = "Continue Day"

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="pressed" from="TimesUpScreen/ContinueDayButton" to="." method="_on_continue_day_button_pressed"]
